--- a/Vista/Vistas/docentes.resx
+++ b/Vista/Vistas/docentes.resx
@@ -313,4 +313,13 @@
         YhP1sK/fZz65SfWG4ue927J86dT6tYaw9WAbHMwP+0h+fv8B4GZR9eptiIwAAAAASUVORK5CYII=
 </value>
   </data>
+  <data name="flowLayoutPanel1.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAFsAAAAvCAYAAACMhbZOAAAAAXNSR0ICQMB9xQAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAFxEAABcRAcom8z8AAAAZdEVYdFNvZnR3YXJlAE1pY3Jvc29mdCBPZmZpY2V/7TVx
+        AAAAeUlEQVR4Xu3QMQEAMAwEoUqP868LphswwNt2McqGyobKhsqGyobKhsqGyobKhsqGyobKhsqGyobK
+        hsqGyobKhsqGyobKhsqGyobKhsqGyobKhsqGyobKhsqGyobKhsqGyobKhsqGyobKhsqGyobKhsqGyobK
+        hspmdh+/6ErIaU6jawAAAABJRU5ErkJggg==
+</value>
+  </data>
 </root>
